# HuffmanCompressionH

./: .gitignore  CMakeLists.txt  README.md
include/: FileHandler.h  HuffmanNode.h  HuffmanTree.h
src/: FileHandler.cpp  HuffmanNode.cpp  HuffmanTree.cpp  main.cpp
test/: HuffmanTreeTest.cpp  HuffmanTreeTest.h  HuffmanTreeTestNoLib.cpp  cose.txt
tests/: CmakeLists.txt  HuffmanTests.cpp
